<resources>
    <string name="app_name">Career Guidance</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="create_your_account">Create your account</string>
    <string name="sign_up_and_get_started">Sign up and get started</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>